# elevatorsolver

./: .env  .env.example  .gitignore  README.md  animation.py  config.yml  config_template.yml  generate_case.py  generate_cases.py  main.py  pyproject.toml  requirements.txt  requirements_gpu.txt  server.py  te.txt  train.py  train_val_experiment.py  validate.py
case_generation/: README.rst  config.txt  generate.py  generate_cases.py  input.txt  input_train_params.txt  plot_results.py  time_distribution.py
cases/case0/: test_0.txt  test_1.txt  test_2.txt
cases/case1/: test_0.txt  test_1.txt  test_2.txt
cases/case2/: test_0.txt  test_1.txt  test_2.txt
core/: elevator.py  level.py  manager.py  passenger.py  reward_type.py
core/agent/: agent.py  train_agent.py  utils.py  validate_agent.py
core/agent/base_agent/: base_agent.py
core/solution/: agent.py  train_agent.py  utils.py  validate.py
core/types/: action_type.py  agent_type.py  case_information.py  level_type.py  reward_type.py  stage_type.py  state_elevator.py  time_wait_type.py
core/unity/: unity_server.py
core/utils/: elevator_info.py  environment.py  logger.py  utils.py
solution/q_table/: q_table.py  train.py  utils.py
solution/q_table_agent/: q_table_agent.py  train.py
test_generator/: generate.py  utils.py
test_generator/tests/: test_1.txt
tests/: test_level.py  test_manager.py
tests/elevator/: test_elevator.py
unity/: unity_server.py
unity/ProjectSettings/: ProjectSettings.asset
unity/UserSettings/: EditorUserSettings.asset
utils/: environment.py  utils.py
(+17 files in other folders)
